<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".activity.AddGuideActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@drawable/toolbar_shape"
            android:fontFamily="@font/cario_semi_bold"
            android:gravity="center"
            android:text="@string/create_guide"
            android:textColor="@color/white"
            android:textSize="@dimen/_20ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_55sdp"
            android:layout_margin="@dimen/_16sdp"
            app:boxStrokeWidth="0dp"
            android:background="@drawable/text_input_layout_shape"
            app:boxStrokeWidthFocused="0dp"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <EditText
                android:id="@+id/nameOfGuide"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:fontFamily="@font/cario_semi_bold"
                android:hint="@string/guide_name"
                android:inputType="text"
                android:maxLength="50"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textColorHint="@color/hintColor"
                android:textSize="@dimen/_14ssp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_55sdp"
            android:layout_margin="@dimen/_16sdp"
            android:background="@drawable/text_input_layout_shape"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

            <EditText
                android:id="@+id/periodGuide"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:fontFamily="@font/cario_semi_bold"
                android:hint="@string/guide_weeks"
                android:inputType="number"
                android:maxLength="2"
                android:maxLines="1"
                android:textDirection="rtl"
                android:textColor="@color/black"
                android:textColorHint="@color/hintColor"
                android:textSize="@dimen/_14ssp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/cario_semi_bold"
            android:text="@string/count_of_day"
            android:textColor="@color/hintColor"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

        <ImageView
            android:id="@+id/minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
            app:layout_constraintTop_toTopOf="@+id/textView3"
            app:srcCompat="@drawable/minus" />

        <ImageView
            android:id="@+id/plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toEndOf="@+id/imageView8"
            app:layout_constraintTop_toTopOf="@+id/textView3"
            app:srcCompat="@drawable/plus" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            app:layout_constraintBottom_toBottomOf="@+id/minus"
            app:layout_constraintStart_toEndOf="@+id/minus"
            app:layout_constraintTop_toBottomOf="@+id/minus"
            app:srcCompat="@drawable/divider" />

        <TextView
            android:id="@+id/countOfDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cario_semi_bold"
            android:maxLength="1"
            android:maxLines="1"
            android:text="6"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toTopOf="@+id/imageView8"
            app:layout_constraintEnd_toStartOf="@+id/plus"
            app:layout_constraintStart_toEndOf="@+id/minus" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            android:fontFamily="@font/cario_semi_bold"
            android:text="@string/difficulty_of_guide"
            android:textColor="@color/hintColor"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/groupOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/text_input_layout_shape"
            android:paddingVertical="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/radio_button_selector"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:fontFamily="@font/cario_semi_bold"
                android:text="@string/first"
                android:textColor="@color/hintColor"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintBottom_toBottomOf="@+id/radio1"
                app:layout_constraintEnd_toStartOf="@+id/radio1"
                app:layout_constraintTop_toTopOf="@+id/radio1" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/groupTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/text_input_layout_shape"
            android:paddingVertical="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/groupOne">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radio2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/radio_button_selector"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:fontFamily="@font/cario_semi_bold"
                android:text="@string/second"
                android:textColor="@color/hintColor"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintBottom_toBottomOf="@+id/radio2"
                app:layout_constraintEnd_toStartOf="@+id/radio2"
                app:layout_constraintTop_toTopOf="@+id/radio2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/groupThree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/text_input_layout_shape"
            android:paddingVertical="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/groupTwo">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radio3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/radio_button_selector"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:fontFamily="@font/cario_semi_bold"
                android:text="@string/third"
                android:textColor="@color/hintColor"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintBottom_toBottomOf="@+id/radio3"
                app:layout_constraintEnd_toStartOf="@+id/radio3"
                app:layout_constraintTop_toTopOf="@+id/radio3" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            android:fontFamily="@font/cario_semi_bold"
            android:text="@string/guide_status"
            android:textColor="@color/hintColor"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/groupThree" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            android:background="@drawable/text_input_layout_shape"
            android:drawableStart="@drawable/ic_baseline_arrow_drop_down_24"
            android:fontFamily="@font/cario_semi_bold"
            android:hint="يرجى الاختيار"
            android:padding="@dimen/_8sdp"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:src="@drawable/ic_baseline_arrow_drop_down_24"
            app:layout_constraintBottom_toBottomOf="@+id/spinner"
            app:layout_constraintStart_toStartOf="@+id/spinner"
            app:layout_constraintTop_toTopOf="@+id/spinner" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginVertical="@dimen/_20sdp"
            android:fontFamily="@font/cario_semi_bold"
            android:padding="@dimen/_12sdp"
            android:text="@string/create_guide"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            app:cornerRadius="@dimen/_4sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>