<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddDayActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_55sdp"
        android:layout_margin="@dimen/_16sdp"
        android:background="@drawable/text_input_layout_shape"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <EditText
            android:id="@+id/nameOfGuide"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:fontFamily="@font/cario_semi_bold"
            android:hint="عنوان اليوم"
            android:inputType="text"
            android:maxLength="50"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/hintColor"
            android:textSize="@dimen/_14ssp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/cario_semi_bold"
        android:text="يرجى تحديد التمارين "
        android:textColor="@color/hintColor"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <androidx.cardview.widget.CardView
            android:id="@+id/chest"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_131sdp"
            android:layout_weight="1"
            app:cardCornerRadius="@dimen/_12sdp"
            app:cardElevation="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/statusBar">

                <ImageView
                    android:id="@+id/img01"
                    android:layout_width="@dimen/_111sdp"
                    android:layout_height="@dimen/_97sdp"
                    android:layout_marginHorizontal="@dimen/_16sdp"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/sader" />

                <TextView
                    android:id="@+id/chestTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cario_semi_bold"
                    android:text="@string/chest"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_18ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img01" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="@dimen/_12sdp"
            android:layout_height="@dimen/_10sdp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/shoulders"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_131sdp"
            android:layout_weight="1"
            app:cardCornerRadius="@dimen/_12sdp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/statusBar">

                <ImageView
                    android:id="@+id/img02"
                    android:layout_width="@dimen/_111sdp"
                    android:layout_height="@dimen/_97sdp"
                    android:layout_marginHorizontal="@dimen/_16sdp"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/ketef" />

                <TextView
                    android:id="@+id/shouldersTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cario_semi_bold"
                    android:text="@string/soulder"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_18ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img02" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <androidx.cardview.widget.CardView
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_131sdp"
            android:layout_weight="1"
            app:cardCornerRadius="@dimen/_12sdp"
            app:cardElevation="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/statusBar">

                <ImageView
                    android:id="@+id/img03"
                    android:layout_width="@dimen/_111sdp"
                    android:layout_height="@dimen/_97sdp"
                    android:layout_marginHorizontal="@dimen/_16sdp"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/daher" />

                <TextView
                    android:id="@+id/backTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cario_semi_bold"
                    android:text="@string/back"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_18ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img03" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="@dimen/_12sdp"
            android:layout_height="@dimen/_10sdp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/legs"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_131sdp"
            android:layout_weight="1"
            app:cardCornerRadius="@dimen/_12sdp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/statusBar">

                <ImageView
                    android:id="@+id/img04"
                    android:layout_width="@dimen/_111sdp"
                    android:layout_height="@dimen/_97sdp"
                    android:layout_marginHorizontal="@dimen/_16sdp"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/leg" />

                <TextView
                    android:id="@+id/legsTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cario_semi_bold"
                    android:text="@string/leg"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_18ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img04" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>